# threatvision

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  Makefile  PROJECT_BRAIN.md  PROJECT_LOGS.md  README.md  docker-compose.yml  start-demo.sh  stop-demo.sh
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/.claude/: settings.local.json
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  blue_agent.py  playbook_agent.py  red_agent.py  sim_engine.py
backend/app/api/: __init__.py  alerts.py  analysts.py  audit_logs.py  dashboard.py  incidents.py  ingestion.py  playbooks.py  projects.py  simulation.py  threats.py  tickets.py
backend/app/data/: __init__.py  seed_analysts.py  seed_db.py  synthetic_generator.py
backend/app/detection/: __init__.py  anomaly_detector.py  correlation_engine.py  mitre_mapper.py  rule_engine.py  threat_classifier.py
backend/app/ingestion/: __init__.py  event_schema.py  normalizer.py  pipeline.py  redis_consumer.py
backend/app/middleware/: audit_middleware.py
backend/app/migrations/: add_phase5_tables.py
backend/app/models/: __init__.py  alert.py  analyst.py  audit_log.py  base.py  incident.py  project.py  simulation.py  threat_event.py  ticket.py  ticket_activity.py
backend/app/schemas/: __init__.py  alert.py  analyst.py  incident.py  project.py  simulation.py  threat_event.py  ticket.py
backend/app/services/: __init__.py  sla_monitor.py  (+3 more)
backend/tests/: conftest.py  test_agents.py  test_detection.py  test_ingestion.py  test_phase5.py
(+37 files in other folders)
